contentstyle.css
@font-face {
  font-family: "Virtue";
  src: local('src/virtue.ttf');
}

@font-face {
font-family: 'Chicago Plain';
font-style: normal;
font-weight: normal;
src: local('Chicago Plain'), url('src/Chicago.woff') format('woff');
}

@font-face {
    font-family: 'Geneva';
    src: url('/src/fonts/Pixelva.woff2') format('woff2'),
    url('/src/fonts/Pixelva.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Chicago';
    src: url('/src/fonts/ChiKareGo2.woff2') format('woff2'),
    url('/src/fonts/ChiKareGo2.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}


body{
    margin: 0;
    height: 100%;
    background-image: url('src/img/background.png')
}

.titlebar{ 
    background-color: white;
    border-bottom: solid 1px black;
    width: 100%;
    height: 20px;
    
}
.logo{
    float: left;
    background-image: url('src/img/logo.png');
    background-repeat: no-repeat;
    margin-left: 20px;
    margin-right: 13px;
    margin-top: 3px;
    width: 15px;
    height: 15px;
}

.infoicons{
    float: right;
    background-image: url('src/img/findermainright.png');
    background-repeat: no-repeat;
    margin-left: 20px;
    margin-right: 15px;
    margin-top: 3px;
    width: 50px;
    height: 17px;
}

.titlebar h2 {
    float: left;
    font-family: 'Chicago';
    font-weight: normal;
    font-size:16px;
    color: black;
    text-decoration: none;
    margin-right: 15px;
    margin-top: 2px;
}
.headerlinks{
    float: left;
}
.dropdowntext{
    float: left;
    height: 21px;
    font-family: 'Chicago Plain';
    font-weight: normal;
    color: black;
    font-size:80%;
    display: inline-block;
    background-color: Transparent;
    background-repeat: no-repeat;
    border: none;
    cursor: pointer;
    outline: none;
    margin-top: 0px;
    margin-right: 0px;
}

.dropdown{
    float: left;
}

.dropdowncontent{
    display: none;
    position: absolute;
    background-color: white;
    min-width: 150px;
    margin-top: 20px;
    border: 1px outset black;
}

.dropdowncontent a{
    float: none;
    color: black;
    padding: 0px 2px;
    text-decoration: none;
    display: block;
}

.dropdowncontent a:hover {
    background-color: black;
    color: white;
}

.dropdown:hover .dropdowncontent{
    display: block;
}

.dropdown:hover .dropdowntext{
    background-color: black;
    color: white;
}

.container{
    text-align: center;
    width: 95%;
}

.divider {
    height: 7%;
}

.windowtitle {
    text-align: center;
    height: 19px;
    width: 68%;
    margin: auto;
    border-right: 2px solid black;
    border-top: 1px solid black;
    border-left: 1px solid black;
    background: url(src/img/windowborderleft.png), url(src/img/windowborderright.png), url(src/img/windowbordercenter.png), #fff;
    background-position: 0 bottom, 99.95% bottom;
    background-repeat: no-repeat,no-repeat,repeat;
    bottom: 0;
}

.finderinfo {
    text-align: center;
    background-color: white;
    height: 16px;
    width: 68%;
    margin: auto;
    border-right: 2px solid black;
    border-top: 1px solid black;
    border-left: 1px solid black;
    background-position: 0 bottom, 99.95% bottom;
    background-repeat: no-repeat;
    bottom: 0;
}


.finderinfobottom {
    height: 3px;
    width: 68%;
    border-right: 2px solid black;
    border-left: 1px solid black;
    margin: auto;
    background: url(src/img/finderinfobarbottom.png), #fff;
    background-position: 0 bottom, 99.95% bottom;
    background-repeat: repeat-x;
    top: 0;
}

.alignleft {
    float: left;
    width:33.33333%;
    text-align:left;
    font-family: 'Geneva';
    font-weight: normal;
    color: black;
    font-size:14px;
}
.aligncenter {
    float: left;
    width:33.33333%;
    text-align:center;
    font-family: 'Geneva';
    font-weight: normal;
    color: black;
    font-size:14px;
}
.alignright {
    float: left;
    width:33.33333%;
    text-align:right;
    font-family: 'Geneva';
    font-weight: normal;
    color: black;
    font-size:14px;
}

.windowtitlename{
    display: inline-block;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 2px;
    background-color: #ffffff;
    font-family: 'Chicago Plain';
    font-weight: normal;
    color: black;
    font-size:13px;
    border-bottom: 1px solid black;
}
.contentarea {
    width: 68%;
    height: 60%;
    background: url(src/img/scrollbar-bg.png), #fff ;
    background-size: 100% 100%;
    border: 1px solid black;
    border-right: 2px solid black;
    border-bottom: 2px solid black;
    margin: auto auto 80px;
    display: inline-block;

}
.currentTime {
    float: right;
    padding-right: 10px;
    padding-top: 3px;
    font-family: 'Chicago Plain';
    font-weight: normal;
    color: black;
    font-size:12px;
}

.socialshare {
    float: right;
    margin-right: 3%
}


.textbox {
    margin: 30px;
}

.iconhdd {
    height: 50px;
    width: 75px;
    background: url(src/img/macintosh-hd.png);
    background-repeat: no-repeat;
    position: absolute;
    top: 43px;
    right: 0px;

}

.icontrash {
    height: 50px;
    width: 30px;
    background: url(src/img/trash.png);
    background-repeat: no-repeat;
    position: absolute;
    bottom: 10px;
    right: 25px;
}



.moonwindow{
    height: 125px;
    width: 100px;
    position: absolute;
    bottom: 25px;
    right: 100px;
    background: black;
    border: 2px solid black;
    border-radius: 4px;
}

.moontitlebar{
    height: 18px;
    width: available;
    background: black;
    font-family: Chicago;
    color: white;
    text-align: center;
    margin: 0;
}

.moontitlebar img{
    float: left;
    padding-left: 6px;
    padding-top: 3px;
    padding-right: 17px;
}

.moontitlebar p{
    font-family: Chicago;
    color: white;
    margin: 0;
    float: left;
    padding-top: 1px;
}


.moonimage{
    width: 100px;
    height: 100px;
    object-fit: fill;
}


.leftcolumn{
    flex-flow: column;
    width: 35%;
    height: 100%;
    display: inline-block;
}


.datewidget{
    display: flex;
    flex-flow: column;
    height: 55%;
    border: 1px solid black;
    margin: 9px 5px 5px;
    float:left;
}

.datewidget img{
    display: block;
    margin: 10px auto 3px;
}

.testwidget{
    display: flex;
    flex-flow: column;
    height: 25%;
    border: 1px solid black;
    margin: 5px;
    float:left;
    width: 129px;
    background-image: url('src/img/background2.png')
}

.date {
    font-family: Geneva;
    font-size: 170%;"
}
.weatherwidget{
    display: flex;
    flex-flow: column;
    height: 85%;
    border: 1px solid black;
    width: 55%;
    float:right;
    margin: 9px 25px 5px 5px;
}

.weatherwidgetwidget img{
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 10px;
    margin-bottom: 3px;
}

